Meta 4/y.output
Terminals unused in grammar

    ARROW
    RESERVED


Grammar

    0 $accept: Program $end

    1 Program: CLASS IDENTIFIER LBRACE MemberList RBRACE

    2 MemberList: ε
    3           | MemberList MethodDecl
    4           | MemberList FieldDecl
    5           | MemberList SEMICOLON

    6 MethodDecl: PUBLIC STATIC MethodHeader MethodBody

    7 FieldDecl: PUBLIC STATIC Type IDENTIFIER IdentifierList SEMICOLON
    8          | error SEMICOLON

    9 IdentifierList: ε
   10               | IdentifierList COMMA IDENTIFIER

   11 Type: BOOL
   12     | INT
   13     | DOUBLE

   14 MethodHeader: Type IDENTIFIER LPAR RPAR
   15             | Type IDENTIFIER LPAR FormalParams RPAR
   16             | VOID IDENTIFIER LPAR RPAR
   17             | VOID IDENTIFIER LPAR FormalParams RPAR

   18 FormalParams: ParamList
   19             | STRING LSQ RSQ IDENTIFIER

   20 ParamList: Type IDENTIFIER
   21          | ParamList COMMA Type IDENTIFIER

   22 MethodBody: LBRACE StatementOrVarDecl RBRACE

   23 StatementOrVarDecl: ε
   24                   | StatementOrVarDecl Statement
   25                   | StatementOrVarDecl VarDecl

   26 VarDecl: Type IDENTIFIER IdentifierList SEMICOLON

   27 Statement: LBRACE StatementList RBRACE
   28          | IF LPAR Expr RPAR Statement
   29          | IF LPAR Expr RPAR Statement ELSE Statement
   30          | WHILE LPAR Expr RPAR Statement
   31          | RETURN SEMICOLON
   32          | RETURN Expr SEMICOLON
   33          | SEMICOLON
   34          | MethodInvocation SEMICOLON
   35          | Assignment SEMICOLON
   36          | ParseArgs SEMICOLON
   37          | PRINT LPAR Expr RPAR SEMICOLON
   38          | PRINT LPAR STRLIT RPAR SEMICOLON
   39          | error SEMICOLON

   40 StatementList: ε
   41              | StatementList Statement

   42 MethodInvocation: IDENTIFIER LPAR RPAR
   43                 | IDENTIFIER LPAR ArgList RPAR
   44                 | IDENTIFIER LPAR error RPAR

   45 ArgList: Expr
   46        | ArgList COMMA Expr

   47 Assignment: IDENTIFIER ASSIGN Expr

   48 ParseArgs: PARSEINT LPAR IDENTIFIER LSQ Expr RSQ RPAR
   49          | PARSEINT LPAR error RPAR

   50 Expr: Expr PLUS Expr
   51     | Expr MINUS Expr
   52     | Expr STAR Expr
   53     | Expr DIV Expr
   54     | Expr MOD Expr
   55     | Expr AND Expr
   56     | Expr OR Expr
   57     | Expr XOR Expr
   58     | Expr LSHIFT Expr
   59     | Expr RSHIFT Expr
   60     | Expr EQ Expr
   61     | Expr GE Expr
   62     | Expr GT Expr
   63     | Expr LE Expr
   64     | Expr LT Expr
   65     | Expr NE Expr
   66     | MINUS Expr
   67     | PLUS Expr
   68     | NOT Expr
   69     | LPAR Expr RPAR
   70     | LPAR error RPAR
   71     | MethodInvocation
   72     | Assignment
   73     | ParseArgs
   74     | IDENTIFIER
   75     | IDENTIFIER DOTLENGTH
   76     | NATURAL
   77     | DECIMAL
   78     | BOOLLIT


Terminals, with rules where they appear

    $end (0) 0
    error (256) 8 39 44 49 70
    LPAR (258) 14 15 16 17 28 29 30 37 38 42 43 44 48 49 69 70
    RPAR (259) 14 15 16 17 28 29 30 37 38 42 43 44 48 49 69 70
    LBRACE (260) 1 22 27
    RBRACE (261) 1 22 27
    LSQ (262) 19 48
    RSQ (263) 19 48
    EQ (264) 60
    ASSIGN (265) 47
    GE (266) 61
    GT (267) 62
    LE (268) 63
    LT (269) 64
    NE (270) 65
    NOT (271) 68
    COMMA (272) 10 21 46
    SEMICOLON (273) 5 7 8 26 31 32 33 34 35 36 37 38 39
    STAR (274) 52
    DIV (275) 53
    PLUS (276) 50 67
    MINUS (277) 51 66
    MOD (278) 54
    AND (279) 55
    OR (280) 56
    ARROW (281)
    LSHIFT (282) 58
    RSHIFT (283) 59
    XOR (284) 57
    INT (285) 12
    DOUBLE (286) 13
    STRING (287) 19
    BOOL (288) 11
    IF (289) 28 29
    ELSE (290) 29
    CLASS (291) 1
    PUBLIC (292) 6 7
    RETURN (293) 31 32
    STATIC (294) 6 7
    VOID (295) 16 17
    WHILE (296) 30
    RESERVED (297)
    DOTLENGTH (298) 75
    PRINT (299) 37 38
    PARSEINT (300) 48 49
    NATURAL <val> (301) 76
    DECIMAL <val> (302) 77
    IDENTIFIER <val> (303) 1 7 10 14 15 16 17 19 20 21 26 42 43 44 47 48 74 75
    STRLIT <val> (304) 38
    BOOLLIT <val> (305) 78
    LOWER_THAN_ELSE (306)
    UNARY (307)


Nonterminals, with rules where they appear

    $accept (53)
        on left: 0
    Program <node> (54)
        on left: 1
        on right: 0
    MemberList <list> (55)
        on left: 2 3 4 5
        on right: 1 3 4 5
    MethodDecl <node> (56)
        on left: 6
        on right: 3
    FieldDecl <list> (57)
        on left: 7 8
        on right: 4
    IdentifierList <list> (58)
        on left: 9 10
        on right: 7 10 26
    Type <node> (59)
        on left: 11 12 13
        on right: 7 14 15 20 21 26
    MethodHeader <node> (60)
        on left: 14 15 16 17
        on right: 6
    FormalParams <list> (61)
        on left: 18 19
        on right: 15 17
    ParamList <list> (62)
        on left: 20 21
        on right: 18 21
    MethodBody <node> (63)
        on left: 22
        on right: 6
    StatementOrVarDecl <list> (64)
        on left: 23 24 25
        on right: 22 24 25
    VarDecl <list> (65)
        on left: 26
        on right: 25
    Statement <node> (66)
        on left: 27 28 29 30 31 32 33 34 35 36 37 38 39
        on right: 24 28 29 30 41
    StatementList <list> (67)
        on left: 40 41
        on right: 27 41
    MethodInvocation <node> (68)
        on left: 42 43 44
        on right: 34 71
    ArgList <list> (69)
        on left: 45 46
        on right: 43 46
    Assignment <node> (70)
        on left: 47
        on right: 35 72
    ParseArgs <node> (71)
        on left: 48 49
        on right: 36 73
    Expr <node> (72)
        on left: 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78
        on right: 28 29 30 32 37 45 46 47 48 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69


State 0

    0 $accept: • Program $end
    1 Program: • CLASS IDENTIFIER LBRACE MemberList RBRACE

    CLASS  shift, and go to state 1

    Program  go to state 2


State 1

    1 Program: CLASS • IDENTIFIER LBRACE MemberList RBRACE

    IDENTIFIER  shift, and go to state 3


State 2

    0 $accept: Program • $end

    $end  shift, and go to state 4


State 3

    1 Program: CLASS IDENTIFIER • LBRACE MemberList RBRACE

    LBRACE  shift, and go to state 5


State 4

    0 $accept: Program $end •

    $default  accept


State 5

    1 Program: CLASS IDENTIFIER LBRACE • MemberList RBRACE
    2 MemberList: ε •
    3           | • MemberList MethodDecl
    4           | • MemberList FieldDecl
    5           | • MemberList SEMICOLON

    $default  reduce using rule 2 (MemberList)

    MemberList  go to state 6


State 6

    1 Program: CLASS IDENTIFIER LBRACE MemberList • RBRACE
    3 MemberList: MemberList • MethodDecl
    4           | MemberList • FieldDecl
    5           | MemberList • SEMICOLON
    6 MethodDecl: • PUBLIC STATIC MethodHeader MethodBody
    7 FieldDecl: • PUBLIC STATIC Type IDENTIFIER IdentifierList SEMICOLON
    8          | • error SEMICOLON

    error      shift, and go to state 7
    RBRACE     shift, and go to state 8
    SEMICOLON  shift, and go to state 9
    PUBLIC     shift, and go to state 10

    MethodDecl  go to state 11
    FieldDecl   go to state 12


State 7

    8 FieldDecl: error • SEMICOLON

    SEMICOLON  shift, and go to state 13


State 8

    1 Program: CLASS IDENTIFIER LBRACE MemberList RBRACE •

    $default  reduce using rule 1 (Program)


State 9

    5 MemberList: MemberList SEMICOLON •

    $default  reduce using rule 5 (MemberList)


State 10

    6 MethodDecl: PUBLIC • STATIC MethodHeader MethodBody
    7 FieldDecl: PUBLIC • STATIC Type IDENTIFIER IdentifierList SEMICOLON

    STATIC  shift, and go to state 14


State 11

    3 MemberList: MemberList MethodDecl •

    $default  reduce using rule 3 (MemberList)


State 12

    4 MemberList: MemberList FieldDecl •

    $default  reduce using rule 4 (MemberList)


State 13

    8 FieldDecl: error SEMICOLON •

    $default  reduce using rule 8 (FieldDecl)


State 14

    6 MethodDecl: PUBLIC STATIC • MethodHeader MethodBody
    7 FieldDecl: PUBLIC STATIC • Type IDENTIFIER IdentifierList SEMICOLON
   11 Type: • BOOL
   12     | • INT
   13     | • DOUBLE
   14 MethodHeader: • Type IDENTIFIER LPAR RPAR
   15             | • Type IDENTIFIER LPAR FormalParams RPAR
   16             | • VOID IDENTIFIER LPAR RPAR
   17             | • VOID IDENTIFIER LPAR FormalParams RPAR

    INT     shift, and go to state 15
    DOUBLE  shift, and go to state 16
    BOOL    shift, and go to state 17
    VOID    shift, and go to state 18

    Type          go to state 19
    MethodHeader  go to state 20


State 15

   12 Type: INT •

    $default  reduce using rule 12 (Type)


State 16

   13 Type: DOUBLE •

    $default  reduce using rule 13 (Type)


State 17

   11 Type: BOOL •

    $default  reduce using rule 11 (Type)


State 18

   16 MethodHeader: VOID • IDENTIFIER LPAR RPAR
   17             | VOID • IDENTIFIER LPAR FormalParams RPAR

    IDENTIFIER  shift, and go to state 21


State 19

    7 FieldDecl: PUBLIC STATIC Type • IDENTIFIER IdentifierList SEMICOLON
   14 MethodHeader: Type • IDENTIFIER LPAR RPAR
   15             | Type • IDENTIFIER LPAR FormalParams RPAR

    IDENTIFIER  shift, and go to state 22


State 20

    6 MethodDecl: PUBLIC STATIC MethodHeader • MethodBody
   22 MethodBody: • LBRACE StatementOrVarDecl RBRACE

    LBRACE  shift, and go to state 23

    MethodBody  go to state 24


State 21

   16 MethodHeader: VOID IDENTIFIER • LPAR RPAR
   17             | VOID IDENTIFIER • LPAR FormalParams RPAR

    LPAR  shift, and go to state 25


State 22

    7 FieldDecl: PUBLIC STATIC Type IDENTIFIER • IdentifierList SEMICOLON
    9 IdentifierList: ε •  [COMMA, SEMICOLON]
   10               | • IdentifierList COMMA IDENTIFIER
   14 MethodHeader: Type IDENTIFIER • LPAR RPAR
   15             | Type IDENTIFIER • LPAR FormalParams RPAR

    LPAR  shift, and go to state 26

    $default  reduce using rule 9 (IdentifierList)

    IdentifierList  go to state 27


State 23

   22 MethodBody: LBRACE • StatementOrVarDecl RBRACE
   23 StatementOrVarDecl: ε •
   24                   | • StatementOrVarDecl Statement
   25                   | • StatementOrVarDecl VarDecl

    $default  reduce using rule 23 (StatementOrVarDecl)

    StatementOrVarDecl  go to state 28


State 24

    6 MethodDecl: PUBLIC STATIC MethodHeader MethodBody •

    $default  reduce using rule 6 (MethodDecl)


State 25

   11 Type: • BOOL
   12     | • INT
   13     | • DOUBLE
   16 MethodHeader: VOID IDENTIFIER LPAR • RPAR
   17             | VOID IDENTIFIER LPAR • FormalParams RPAR
   18 FormalParams: • ParamList
   19             | • STRING LSQ RSQ IDENTIFIER
   20 ParamList: • Type IDENTIFIER
   21          | • ParamList COMMA Type IDENTIFIER

    RPAR    shift, and go to state 29
    INT     shift, and go to state 15
    DOUBLE  shift, and go to state 16
    STRING  shift, and go to state 30
    BOOL    shift, and go to state 17

    Type          go to state 31
    FormalParams  go to state 32
    ParamList     go to state 33


State 26

   11 Type: • BOOL
   12     | • INT
   13     | • DOUBLE
   14 MethodHeader: Type IDENTIFIER LPAR • RPAR
   15             | Type IDENTIFIER LPAR • FormalParams RPAR
   18 FormalParams: • ParamList
   19             | • STRING LSQ RSQ IDENTIFIER
   20 ParamList: • Type IDENTIFIER
   21          | • ParamList COMMA Type IDENTIFIER

    RPAR    shift, and go to state 34
    INT     shift, and go to state 15
    DOUBLE  shift, and go to state 16
    STRING  shift, and go to state 30
    BOOL    shift, and go to state 17

    Type          go to state 31
    FormalParams  go to state 35
    ParamList     go to state 33


State 27

    7 FieldDecl: PUBLIC STATIC Type IDENTIFIER IdentifierList • SEMICOLON
   10 IdentifierList: IdentifierList • COMMA IDENTIFIER

    COMMA      shift, and go to state 36
    SEMICOLON  shift, and go to state 37


State 28

   11 Type: • BOOL
   12     | • INT
   13     | • DOUBLE
   22 MethodBody: LBRACE StatementOrVarDecl • RBRACE
   24 StatementOrVarDecl: StatementOrVarDecl • Statement
   25                   | StatementOrVarDecl • VarDecl
   26 VarDecl: • Type IDENTIFIER IdentifierList SEMICOLON
   27 Statement: • LBRACE StatementList RBRACE
   28          | • IF LPAR Expr RPAR Statement
   29          | • IF LPAR Expr RPAR Statement ELSE Statement
   30          | • WHILE LPAR Expr RPAR Statement
   31          | • RETURN SEMICOLON
   32          | • RETURN Expr SEMICOLON
   33          | • SEMICOLON
   34          | • MethodInvocation SEMICOLON
   35          | • Assignment SEMICOLON
   36          | • ParseArgs SEMICOLON
   37          | • PRINT LPAR Expr RPAR SEMICOLON
   38          | • PRINT LPAR STRLIT RPAR SEMICOLON
   39          | • error SEMICOLON
   42 MethodInvocation: • IDENTIFIER LPAR RPAR
   43                 | • IDENTIFIER LPAR ArgList RPAR
   44                 | • IDENTIFIER LPAR error RPAR
   47 Assignment: • IDENTIFIER ASSIGN Expr
   48 ParseArgs: • PARSEINT LPAR IDENTIFIER LSQ Expr RSQ RPAR
   49          | • PARSEINT LPAR error RPAR

    error       shift, and go to state 38
    LBRACE      shift, and go to state 39
    RBRACE      shift, and go to state 40
    SEMICOLON   shift, and go to state 41
    INT         shift, and go to state 15
    DOUBLE      shift, and go to state 16
    BOOL        shift, and go to state 17
    IF          shift, and go to state 42
    RETURN      shift, and go to state 43
    WHILE       shift, and go to state 44
    PRINT       shift, and go to state 45
    PARSEINT    shift, and go to state 46
    IDENTIFIER  shift, and go to state 47

    Type              go to state 48
    VarDecl           go to state 49
    Statement         go to state 50
    MethodInvocation  go to state 51
    Assignment        go to state 52
    ParseArgs         go to state 53


State 29

   16 MethodHeader: VOID IDENTIFIER LPAR RPAR •

    $default  reduce using rule 16 (MethodHeader)


State 30

   19 FormalParams: STRING • LSQ RSQ IDENTIFIER

    LSQ  shift, and go to state 54


State 31

   20 ParamList: Type • IDENTIFIER

    IDENTIFIER  shift, and go to state 55


State 32

   17 MethodHeader: VOID IDENTIFIER LPAR FormalParams • RPAR

    RPAR  shift, and go to state 56


State 33

   18 FormalParams: ParamList •  [RPAR]
   21 ParamList: ParamList • COMMA Type IDENTIFIER

    COMMA  shift, and go to state 57

    $default  reduce using rule 18 (FormalParams)


State 34

   14 MethodHeader: Type IDENTIFIER LPAR RPAR •

    $default  reduce using rule 14 (MethodHeader)


State 35

   15 MethodHeader: Type IDENTIFIER LPAR FormalParams • RPAR

    RPAR  shift, and go to state 58


State 36

   10 IdentifierList: IdentifierList COMMA • IDENTIFIER

    IDENTIFIER  shift, and go to state 59


State 37

    7 FieldDecl: PUBLIC STATIC Type IDENTIFIER IdentifierList SEMICOLON •

    $default  reduce using rule 7 (FieldDecl)


State 38

   39 Statement: error • SEMICOLON

    SEMICOLON  shift, and go to state 60


State 39
